Re-Themed The Site

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,7 +9,12 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="ChromebookWebApp.styles.css" rel="stylesheet" />
-
+    <style>
+        html {
+            background-color: #1c1c1c;
+            color: #cdcdcd;
+        }
+    </style>
 </head>
 
 <body>
